# streaming-cloud

./: .env.example  .gitignore  .mcp.json  DEPLOYMENT_GUIDE.md  ENTERPRISE_IMPROVEMENTS.md  GAP_ANALYSIS_REPORT.md  IMPLEMENTATION_CHECKLIST.md  L8_VERIFICATION_CHECKLIST.md  MIGRATION_PLAN.md  Makefile  README.md  SETUP_KEYS.md  SUBSCRIPTIONS_AND_TIERS.md  VALIDATION_REPORT.md  stack.md
.github/workflows/: ci-cd.yml  smoke-test.yml
backend/: .env.example  .gitignore  composer.json  phpunit.xml
backend-rs/: .env.example  Cargo.toml
backend-rs/crates/api/: Cargo.toml
backend-rs/crates/api/migrations/: 0001_auth.sql  0002_rooms.sql  0003_chat_alerts.sql  0004_sessions_participants.sql  0005_billing.sql  0006_files.sql  0007_admin.sql
backend-rs/crates/api/src/: config.rs  error.rs  main.rs  observability.rs  s3.rs  state.rs  stripe.rs  tests_integration.rs  util.rs
backend-rs/crates/api/src/auth/: extractor.rs  mod.rs  password.rs  token.rs
backend-rs/crates/api/src/db/: admin.rs  alerts.rs  analytics.rs  chat.rs  files.rs  mod.rs  organizations.rs  participants.rs  plans.rs  rooms.rs  sessions.rs  subscriptions.rs  tokens.rs  users.rs  workspaces.rs
backend-rs/crates/api/src/domain/: alert.rs  chat.rs  file.rs  mod.rs  organization.rs  participant.rs  plan.rs  room.rs  subscription.rs  user.rs  workspace.rs
backend-rs/crates/api/src/http/: admin.rs  alerts.rs  analytics.rs  auth.rs  billing.rs  chat.rs  files.rs  guard.rs  health.rs  metrics.rs  mod.rs  organizations.rs  rooms.rs  rooms_live.rs  workspaces.rs
backend-rs/crates/api/src/signaling/: mod.rs  sfu.rs  token.rs
backend/app/Events/: ParticipantJoined.php  ParticipantLeft.php  RoomCreated.php  RoomEnded.php  RoomStarted.php
backend/app/Exceptions/: RoomException.php
backend/app/Jobs/: CleanupEndedRooms.php  ProcessRecording.php
backend/app/Models/: Alert.php  ApiKey.php  AuditLog.php  ChatMessage.php  Organization.php  OrganizationMember.php  Plan.php  Recording.php  Room.php  RoomFile.php  RoomParticipant.php  RoomSession.php  Subscription.php  User.php  Workspace.php  WorkspaceMember.php
backend/app/Notifications/: InviteToRoomNotification.php  RoomStartedNotification.php
backend/app/Policies/: OrganizationPolicy.php  RoomPolicy.php  WorkspacePolicy.php
backend/app/Providers/: AppServiceProvider.php  AuthServiceProvider.php
backend/app/Services/: AnalyticsService.php  AuditService.php  CacheService.php  CircuitBreakerService.php  FileUploadService.php  MetricsService.php  RecordingService.php  RetryService.php  RoomService.php  SentryService.php  SignalingService.php  StripeWebhookService.php  SubscriptionService.php  TracingService.php
backend/config/: cors.php  database.php  horizon.php  services.php
backend/database/factories/: AlertFactory.php  ChatMessageFactory.php  OrganizationFactory.php  OrganizationMemberFactory.php  PlanFactory.php  RoomFactory.php  RoomParticipantFactory.php  RoomSessionFactory.php  SubscriptionFactory.php  UserFactory.php  WorkspaceFactory.php  WorkspaceMemberFactory.php
backend/database/migrations/: 2024_01_01_000001_create_plans_table.php  2024_01_01_000002_create_users_table.php  2024_01_01_000003_create_organizations_table.php  2024_01_01_000004_create_subscriptions_table.php  2024_01_01_000005_create_organization_members_table.php  2024_01_01_000006_create_workspaces_table.php  2024_01_01_000007_create_workspace_members_table.php  2024_01_01_000008_create_rooms_table.php  2024_01_01_000009_create_room_sessions_table.php  2024_01_01_000010_create_room_participants_table.php  (+6 more)
backend/routes/: api.php  console.php
backend/tests/: Pest.php  TestCase.php
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  MEDIA_INFRASTRUCTURE.md  TECH_STACK_AUDIT.md
docs/migrations/: 002_add_performance_indexes.sql  003_add_table_partitioning.sql
frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.optimization.ts  vite.config.ts
frontend-svelte/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend-svelte/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
infrastructure/docker/: Dockerfile.api-rs  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend-svelte  Dockerfile.sfu  Dockerfile.signaling  docker-compose.yml
infrastructure/nginx/: load-balancer.conf
infrastructure/pgbouncer/: pgbouncer.ini
infrastructure/scripts/: health-monitor.sh
recorder/: Dockerfile  package-lock.json  package.json  tsconfig.json
recorder/src/: index.ts
sfu/: .env.example  .eslintrc.cjs  package-lock.json  package.json
sfu/src/: index.ts
signaling/: .env.example  .gitignore  package-lock.json  package.json
signaling-rs/: Cargo.toml
signaling-rs/src/: config.rs  main.rs
signaling-rs/src/services/: auth.rs  mod.rs  room_manager.rs  sfu_proxy.rs
signaling-rs/src/ws/: protocol.rs  session.rs
signaling/src/: index.ts
(+157 files in other folders)
