[package]
name = "signaling-rs"
version = "0.1.0"
edition = "2021"
description = "Rust WebRTC signaling server – drop-in replacement for the Node.js signaling service"

[dependencies]
# Web framework & WebSocket
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis (async, tokio runtime)
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }

# Auth
jsonwebtoken = "9"

# HTTP client to SFU
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
