[package]
name = "tradingroom-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Trading Room SaaS API — Rust (Axum + Tokio + sqlx) rewrite of the Laravel backend"

[[bin]]
name = "tradingroom-api"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
argon2.workspace = true
password-hash.workspace = true
bcrypt.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
garde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics-exporter-prometheus.workspace = true
dotenvy.workspace = true

[features]
# Enables the database integration suite (`#[sqlx::test]`); requires a reachable
# Postgres via DATABASE_URL. Off by default so unit tests run without a DB.
integration = []
